--- a/styles/blog.css
+++ b/styles/blog.css
@@ -145,23 +145,43 @@ text-transform: capitalize;
     margin-left: 856px;
     padding: 14px 32px;
 }
+.c{
+   
+   margin-left: 100px;
+   
+}
+.b{
+    
+}
 table{
-    text-align: center;
-    margin-top: 50px;
-    padding-left: 180px;
+    
+    
+    align-items: center;
+    justify-content: center;
+    
+    
+    
+   
     
    
 
 }
-tr{
-   
+.f{
+    color: #F00;
+}
+
+    
+
+tbody{
+    text-align: center;
 }
 td {
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
+    text-align: center;
     
-    padding: 10px;
+   
+   padding-left: 10px;
+    
+    
 }
 .subscribe{
     background-color: lightpink;
@@ -187,11 +207,25 @@ td {
     font-weight: 400;
     line-height: 30px; 
 }
+label{
+    position: relative;
+}
+.sub-input{
+    border: 0px;
+    width: 300px;
+    padding: 15px;
+    margin-right: 0px;
+    
+    right: 0px;
+
+}
 .sub-btn{
+   
     background-color: #F00;
     border: 0px;
     color: white;
-    border-radius: 80px;
+    
+    
    
     
     
